Mejora maquetacion. Otros.

--- a/src/app/layouts/home/identity/identity.component.html
+++ b/src/app/layouts/home/identity/identity.component.html
@@ -4,7 +4,8 @@
   <!--======================================== -->
 
   <section id="identity">
-      <div class="container-fluid">
+    
+      <div id="identityContainer" class="container-fluid">
 
         <div class="row">
 
