--- a/src/app/layouts/home/team/team.component.html
+++ b/src/app/layouts/home/team/team.component.html
@@ -3,7 +3,7 @@
   <!--=============== SPEAKERS =============== -->
   <!--======================================== -->
 
-  <section id="speakers" class="mt-4 mb-3 pb-5">
+  <section id="speakers" class="mb-3 pb-5">
     <div class="container">
       <div id="speakersSpaceAtBeginning" class="row"></div>
 
