Mejora maquetacion. Otros.

--- a/src/app/layouts/home/identity/identity.component.html
+++ b/src/app/layouts/home/identity/identity.component.html
@@ -36,7 +36,7 @@
                     <div id="logoAndComponentRow" class="row"> -->
                     
                         <div class="col-md-12 col-lg-6 pb-4 text-center"> 
-                          <img id="teamLogoGama" src="../assets/img/GAMABodyLogo.png" alt="Logotipo de GAMA">
+                          <img id="gamaTeamLogo" src="../assets/img/GAMABodyLogo.png" alt="Logotipo de GAMA">
                         </div>
                         
                         <div id="identitySpaceBeetweenLogoAndText" class="row"></div>
