--- a/src/app/layouts/home/team/team.component.scss
+++ b/src/app/layouts/home/team/team.component.scss
@@ -107,7 +107,7 @@
     #speakers {
   
       background-color: #f9f9f9;
-      // padding-top: 40px;
+      padding-top: 40px;
   
       #speakerTitleFirstLine {
         font-size: 1.1rem;
