--- a/src/app/layouts/home/identity/identity.component.scss
+++ b/src/app/layouts/home/identity/identity.component.scss
@@ -30,28 +30,56 @@
 
       #identityContainer {
 
-      //=========== CELL PHONE SIZE ===========//
-          @media only screen and (max-width: 1046px) {
-            margin-top: 10px;
-            margin-bottom: 25px;
-            margin-right: 0 auto;
-            margin-left: 0 auto;
+
+          //=========== NORMAL SCREEN SIZE ===========//
+          @media only screen and (min-width: 1047px) {
+            padding: 0;
+            margin: 0 auto;
+            // padding-top: 0;
+            // padding-left: 0;
+            // padding-right: 0;
+            // padding-bottom: 35px;
           }
 
+          //=========== CELL PHONE SIZE ===========//
           @media only screen and (max-width: 1046px) {
-            margin: 0 auto;
             padding: 0;
+            // margin-top: 10px;
+            // margin-bottom: 25px;
+            margin-right: 0 auto;
+            margin-left: 0 auto;
           }
 
           .row { 
 
                 display: flex;
+
                 position: relative;
+
                 padding-bottom: 25px;
                 width: 100%;
                 height: 100%;
                 margin: 0 auto;
-                padding: 0;
+                // padding: 0;
+                padding-top: 0;
+                // padding-left: 10px;
+                // padding-right: 10px;
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (min-width: 1047px) {
+                    padding-bottom: 17px;
+                }
+                //=========== MEDIIUM SCREEN SIZE ===========//
+                @media only screen and (max-width: 1046px) {
+                  padding-bottom: 10px;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 430px) {
+                    padding-bottom: 10px;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 330px) {
+                    padding-bottom: 0px;
+                }
 
 
                 #canvas {
@@ -64,6 +92,7 @@
                   height: 100%;
                   width: 100%;
                   // background: rgba(255, 255, 255, 0.8); // Fondo translúcido o con textura
+
                   z-index: 1; // Capa base del lienzo
 
                   background: url('../../../../assets/img/identity-bg-4.png'); 
@@ -72,7 +101,7 @@
                   // box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); // Sombra para dar efecto de flotación
                   // border: 2px solid rgba(255, 255, 255, 0.6);
                   // backdrop-filter: blur(10px); // Efecto de vidrio esmerilado
-                  opacity: 0.1; //Reduce la opacidad al 80%
+                  opacity: 0.12; //Reduce la opacidad al 80%
                   
                   // @media only screen and (max-width: 1060px) {
                   //   width: 90%;
@@ -85,6 +114,7 @@
                   // @media only screen and (max-width: 594px) {
                   //   width: 90%;
                   // }
+
                 } //end canvas
 
                 #canvasContainer {
@@ -99,26 +129,31 @@
                     padding: 0;
                     z-index: 2;
 
-                      #identityRow {
+                    #identityRow {
 
-                          // display: flex;
-                          // font-weight: bold !important;
+                        // display: flex;
+                        // font-weight: bold !important;
 
-                          #significadoGAMA {
+                        #significadoGAMA {
 
-                              padding-left: 5%;
-                              //=========== CELL PHONE SIZE ===========//
-                              @media only screen and (max-width: 1046px) {
-                                margin-top: 20px;
-                              }
-                              // z-index: 2; 
+                            padding-left: 5%;
+                            //=========== NORMAL SCREEN SIZE ===========//
+                            @media only screen and (min-width: 1047px) {
+                              margin-top: 0px;
+                            }
+                            //=========== CELL PHONE SIZE ===========//
+                            @media only screen and (max-width: 1046px) {
+                              margin-top: 20px;
+                            }
+                            // z-index: 2; 
 
-                              #identityTitleFirstLine {
-                                  //=========== CELL PHONE SIZE ===========//
+                            #identityTitleFirstLine {
+                                
+                                  //=========== NORMAL SCREEN SIZE ===========//
                                   @media only screen and (min-width: 1047px) {
                                     font-size: 1.5rem;
                                   }
-
+                                  //=========== CELL PHONE SIZE ===========//
                                   @media only screen and (max-width: 1046px) {
                                     font-size: 1.2rem;
                                   }
@@ -128,38 +163,39 @@
                                   margin: 0 auto;
                                   margin-bottom: 10px;
 
-                                  //=========== CELL PHONE SIZE ===========//
+                                  
+                                  //=========== NORMAL SCREEN SIZE ===========//
                                   @media only screen and (min-width: 1047px) {
                                     padding-bottom: 8px;
                                   }
-
+                                  //=========== CELL PHONE SIZE ===========//
                                   @media only screen and (max-width: 1046px) {
                                     padding-bottom: 5px;
                                   }
                                 
                                 
-                                // font-weight: normal;
-                                // font-family: YesevaOne-Regula !important;
-                                // font-family: Arial, Helvetica, sans-serif !important;
-                                      // font-family: monospace !important;
-                                // font-family: cursive !important;
-                                // font-family: OpenSans-Regular !important;
-                                // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
-                                // font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
-                                  // font-family: serif !important;
-                                // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
-                                // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
-                                // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
-                              } 
+                                  // font-weight: normal;
+                                  // font-family: YesevaOne-Regula !important;
+                                  // font-family: Arial, Helvetica, sans-serif !important;
+                                        // font-family: monospace !important;
+                                  // font-family: cursive !important;
+                                  // font-family: OpenSans-Regular !important;
+                                  // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
+                                  // font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+                                    // font-family: serif !important;
+                                  // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+                                  // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
+                                  // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+                            } 
 
-                          }
-                          
+                        }
+                        
 
-                          #teamLogoGama {
+                        #gamaTeamLogo {
 
                             margin: 0px;
 
-                            //=========== CELL PHONE SIZE ===========//
+                            //=========== NORMAL SCREEN SIZE ===========//
                             @media only screen and (min-width: 1047px) {
                               padding-bottom: 0px;
                               padding-right: 0px;
@@ -167,44 +203,51 @@
                               padding-top: 10px;
                               width: 43vw;
                             }
-
+                            //=========== CELL PHONE SIZE ===========//
                             @media only screen and (max-width: 1046px) {
                               padding-top: 0px;
                               width: 70%;
                               max-width: 500px;
                             }
 
-                          }
+                        }
 
 
-                          #identitySpaceBeetweenLogoAndText {
+                        #identitySpaceBeetweenLogoAndText {
                             height: 30px;
-                          }
+                        }
 
 
-                          .identityComponent {
+                        .identityComponent {
                             // background-color: white;
+                            //=========== NORMAL SCREEN SIZE ===========//
+                            @media only screen and (min-width: 1047px) {
+                              margin-top: 0px;
+                              margin-bottom: 0px; 
+                            }
+                            //=========== CELL PHONE SIZE ===========//
                             @media only screen and (max-width: 1046px) {
+                              padding-left: 15px;
+                              padding-right: 15px;
                               margin-top: 0px;
                               margin-bottom: 20px;  
                             }
-                          }
-                      
+                        }
+                    
 
-                          .identityComponentTitle {
+                        .identityComponentTitle {
                             font-size: 1.5rem;
                             color: #1e2757;
                             letter-spacing: 3px;
+                        }
 
-                          }
-
-                          hr {
+                        hr {
                             padding: 0px 0px 22px 0px;
                             margin: 0px 30px;
-                          }
+                        }
 
 
-                      } //end logoAndComponentRow
+                    } //end logoAndComponentRow
                     
                 } // end canvasContainer
 
