Mejora maquetacion. Otros.

--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
@@ -2,85 +2,96 @@
   <!--========= TEN YEARS EXPERIENCE ========= -->
   <!--======================================== -->
 
-  <section id="tenYearsExperience" class="pt-4 pb-5">
+  <section id="tenYearsExperience" class="pt-4">
 
-    <div class="container-fluid">
+      <div class="container-fluid">
 
-      <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
-      <!-- <div id="tenYearsExperienceTitle" class="col text-center mt-4 mb-5">
-        <p><span id="tenYearsExperienceFirstSpan">10 </span><span id="tenYearsExperienceSecondSpan">AÑOS DE EXPERIENCIA</span></p>
-      </div> -->
+        <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
+        <!-- <div id="tenYearsExperienceTitle" class="col text-center mt-4 mb-5">
+          <p><span id="tenYearsExperienceFirstSpan">10 </span><span id="tenYearsExperienceSecondSpan">AÑOS DE EXPERIENCIA</span></p>
+        </div> -->
 
-      <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
-      <!-- <div id="cellPhoneCurrentYearTourTitle" class="col text-center mt-4 mb-5">
-          <p>
-              <span id="currentYearTourFirstSpan">TOUR MISIONERO </span>
-              <br>
-              <br>
-              <span id="currentYearTourSecondSpan">2025</span>
-          </p>
-      </div> -->
+        <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
+        <!-- <div id="cellPhoneCurrentYearTourTitle" class="col text-center mt-4 mb-5">
+            <p>
+                <span id="currentYearTourFirstSpan">TOUR MISIONERO </span>
+                <br>
+                <br>
+                <span id="currentYearTourSecondSpan">2025</span>
+            </p>
+        </div> -->
 
-  
-        <div class="row">
-        
-            <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
-            <div id="tenYearsExperienceLelftDiv" class="title3" >
+    
+          <div class="row">
 
-              
-                <!-- <div id="canvas"></div> -->
+              <div id="canvas"></div> <!-- Lienzo de fondo -->
+              <!-- <div class="canvas"></div>  -->
 
-                <div id="tenYearsExperienceLelftDivContainer">
+              <div id="canvasContainer">
 
-                    <!-- <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M50 10C40 10 30 15 25 25C20 35 25 45 30 55C35 65 40 75 50 80C60 75 65 65 70 55C75 45 80 35 75 25C70 15 60 10 50 10Z" fill="green"/>
-                      <circle cx="40" cy="30" r="5" fill="black"/>
-                      <path d="M45 35L50 40L45 45Z" fill="orange"/>
-                    </svg> -->
-                    <p>
-                      <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">AÑOS</span>
-                    </p>
-                    <br>
-                    <p>
-                      <span id="tenYearsExperience3Span">DE</span>
-                    </p>
-                    <br>
-                    <p>
-                      <span id="tenYearsExperience4Span">EXPERIENCIA</span>
-                    </p>
-                    <br>
-                    <p>
-                      <span id="tenYearsExperience5Span">PARA</span>
-                    </p>
-                    <br>
-                    <p>
-                      <span id="tenYearsExperience6Span">LA GLORIA</span>
-                    </p>
-                    <br>
-                    <p>
-                      <span id="tenYearsExperience7Span">DE DIOS</span>
-                    </p>
-                </div>
-
-              <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
-              <!-- <div id="cellPhoneTenYearsExperienceTitle" class="col">
-                  <p>
-                      <span id="tenYearsExperienceFirstSpan">TOUR MISIONERO </span>
-                      <br>
-                      <br>
-                      <span id="tenYearsExperienceSecondSpan">2025</span>
-                  </p>
-              </div> -->
-
-            </div>
+                    <div id="tenYearsRow" class="row">
             
+                        <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
+                        <div id="tenYearsExperienceLelftDiv" class="title3" >
 
-            <div class="imageContainer">
-              <img src="../assets/img/brochure5.jpeg">
-            </div>
+                          
+                              <!-- <div id="canvas"></div> -->
 
-        </div>
+                              <div id="tenYearsExperienceLelftDivContainer">
 
-    </div>
+                                  <!-- <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M50 10C40 10 30 15 25 25C20 35 25 45 30 55C35 65 40 75 50 80C60 75 65 65 70 55C75 45 80 35 75 25C70 15 60 10 50 10Z" fill="green"/>
+                                    <circle cx="40" cy="30" r="5" fill="black"/>
+                                    <path d="M45 35L50 40L45 45Z" fill="orange"/>
+                                  </svg> -->
+                                  <p>
+                                    <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">AÑOS</span>
+                                  </p>
+                                  <br>
+                                  <p>
+                                    <span id="tenYearsExperience3Span">DE</span>
+                                  </p>
+                                  <br>
+                                  <p>
+                                    <span id="tenYearsExperience4Span">EXPERIENCIA</span>
+                                  </p>
+                                  <br>
+                                  <p>
+                                    <span id="tenYearsExperience5Span">PARA</span>
+                                  </p>
+                                  <br>
+                                  <p>
+                                    <span id="tenYearsExperience6Span">LA GLORIA</span>
+                                  </p>
+                                  <br>
+                                  <p>
+                                    <span id="tenYearsExperience7Span">DE DIOS</span>
+                                  </p>
+                              </div>
+
+                            <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
+                            <!-- <div id="cellPhoneTenYearsExperienceTitle" class="col">
+                                <p>
+                                    <span id="tenYearsExperienceFirstSpan">TOUR MISIONERO </span>
+                                    <br>
+                                    <br>
+                                    <span id="tenYearsExperienceSecondSpan">2025</span>
+                                </p>
+                            </div> -->
+
+                          </div>
+                          
+
+                          <div class="imageContainer">
+                            <img src="../assets/img/brochure5.jpeg">
+                          </div>
+
+                    </div>
+              
+              </div> 
+
+          </div>
+
+      </div>
 
 </section>
