Creacion joinus-info. Otros.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -130,7 +130,10 @@
   </section>
 -->
 
-
+  <!--======================================== -->
+  <!--=== INFORMACION UNETE A LAS MISIONES === -->
+  <!--======================================== -->
+  <app-joinus-info></app-joinus-info>
 
   <!--======================================== -->
   <!--========= UNETE A LAS MISIONES ========= -->
