--- a/src/app/layouts/home/joinus-info/joinus-info.component.html
+++ b/src/app/layouts/home/joinus-info/joinus-info.component.html
@@ -1,1 +1,9 @@
 <p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
+<p>joinus-info works!</p>
