--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -6,9 +6,9 @@
     <div class="container">
 
           <div class="col">
-            <p id="uneteMisionesTitleFirstLine" class="title2">ÚNETE A LAS </p>
+            <p id="uneteMisionesTitleFirstLine" class="title2">ÚNETE AL </p>
             <br>
-            <p id="uneteMisionesTitleSecondLine" class="title2">MISIONES</p>
+            <p id="uneteMisionesTitleSecondLine" class="title2">TOUR 2025</p>
           </div>
           <p id="uneteMisionesDescParagraph" class="text">
           <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
@@ -34,7 +34,145 @@
               <mat-label>Correo electrónico</mat-label>
               <input matInput formControlName="email" name="email" required>
             </mat-form-field>
-      
+
+            <!-- Número de teléfono y Cumpleaños -->
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Número de teléfono</mat-label>
+              <input matInput formControlName="telefono" name="telefono" required>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Localidad</mat-label>
+              <input matInput formControlName="localidad" name="localidad" required>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>País</mat-label>
+              <mat-select formControlName="pais" name="pais" required>
+                <mat-option value="Afganistán">Afganistán</mat-option>
+                <mat-option value="Albania">Albania</mat-option>
+                <mat-option value="Alemania">Alemania</mat-option>
+                <mat-option value="Andorra">Andorra</mat-option>
+                <mat-option value="Angola">Angola</mat-option>
+                <mat-option value="Antigua y Barbuda">Antigua y Barbuda</mat-option>
+                <mat-option value="Arabia Saudita">Arabia Saudita</mat-option>
+                <mat-option value="Argelia">Argelia</mat-option>
+                <mat-option value="Argentina">Argentina</mat-option>
+                <mat-option value="Armenia">Armenia</mat-option>
+                <mat-option value="Australia">Australia</mat-option>
+                <mat-option value="Austria">Austria</mat-option>
+                <mat-option value="Azerbaiyán">Azerbaiyán</mat-option>
+                <mat-option value="Bahamas">Bahamas</mat-option>
+                <mat-option value="Bangladés">Bangladés</mat-option>
+                <mat-option value="Barbados">Barbados</mat-option>
+                <mat-option value="Baréin">Baréin</mat-option>
+                <mat-option value="Bélgica">Bélgica</mat-option>
+                <mat-option value="Belice">Belice</mat-option>
+                <mat-option value="Benín">Benín</mat-option>
+                <mat-option value="Bielorrusia">Bielorrusia</mat-option>
+                <mat-option value="Birmania">Birmania</mat-option>
+                <mat-option value="Bolivia">Bolivia</mat-option>
+                <mat-option value="Bosnia y Herzegovina">Bosnia y Herzegovina</mat-option>
+                <mat-option value="Botsuana">Botsuana</mat-option>
+                <mat-option value="Brasil">Brasil</mat-option>
+                <mat-option value="Brunéi">Brunéi</mat-option>
+                <mat-option value="Bulgaria">Bulgaria</mat-option>
+                <mat-option value="Burkina Faso">Burkina Faso</mat-option>
+                <mat-option value="Burundi">Burundi</mat-option>
+                <mat-option value="Bután">Bután</mat-option>
+                <mat-option value="Cabo Verde">Cabo Verde</mat-option>
+                <mat-option value="Camboya">Camboya</mat-option>
+                <mat-option value="Camerún">Camerún</mat-option>
+                <mat-option value="Canadá">Canadá</mat-option>
+                <mat-option value="Catar">Catar</mat-option>
+                <mat-option value="Chad">Chad</mat-option>
+                <mat-option value="Chile">Chile</mat-option>
+                <mat-option value="China">China</mat-option>
+                <mat-option value="Chipre">Chipre</mat-option>
+                <mat-option value="Colombia">Colombia</mat-option>
+                <mat-option value="Comoras">Comoras</mat-option>
+                <mat-option value="Congo">Congo</mat-option>
+                <mat-option value="Corea del Norte">Corea del Norte</mat-option>
+                <mat-option value="Corea del Sur">Corea del Sur</mat-option>
+                <mat-option value="Costa de Marfil">Costa de Marfil</mat-option>
+                <mat-option value="Costa Rica">Costa Rica</mat-option>
+                <mat-option value="Croacia">Croacia</mat-option>
+                <mat-option value="Cuba">Cuba</mat-option>
+                <mat-option value="Dinamarca">Dinamarca</mat-option>
+                <mat-option value="Dominica">Dominica</mat-option>
+                <mat-option value="Ecuador">Ecuador</mat-option>
+                <mat-option value="Egipto">Egipto</mat-option>
+                <mat-option value="El Salvador">El Salvador</mat-option>
+                <mat-option value="Emiratos Árabes Unidos">Emiratos Árabes Unidos</mat-option>
+                <mat-option value="Eritrea">Eritrea</mat-option>
+                <mat-option value="Eslovaquia">Eslovaquia</mat-option>
+                <mat-option value="Eslovenia">Eslovenia</mat-option>
+                <mat-option value="España">España</mat-option>
+                <mat-option value="Estados Unidos">Estados Unidos</mat-option>
+                <mat-option value="Estonia">Estonia</mat-option>
+                <mat-option value="Esuatini">Esuatini</mat-option>
+                <mat-option value="Etiopía">Etiopía</mat-option>
+                <mat-option value="Filipinas">Filipinas</mat-option>
+                <mat-option value="Finlandia">Finlandia</mat-option>
+                <mat-option value="Francia">Francia</mat-option>
+                <mat-option value="Gabón">Gabón</mat-option>
+                <mat-option value="Gambia">Gambia</mat-option>
+                <mat-option value="Ghana">Ghana</mat-option>
+                <mat-option value="Grecia">Grecia</mat-option>
+                <mat-option value="Guatemala">Guatemala</mat-option>
+                <mat-option value="Guinea">Guinea</mat-option>
+                <mat-option value="Haití">Haití</mat-option>
+                <mat-option value="Honduras">Honduras</mat-option>
+                <mat-option value="Hungría">Hungría</mat-option>
+                <mat-option value="India">India</mat-option>
+                <mat-option value="Indonesia">Indonesia</mat-option>
+                <mat-option value="Irán">Irán</mat-option>
+                <mat-option value="Iraq">Iraq</mat-option>
+                <mat-option value="Irlanda">Irlanda</mat-option>
+                <mat-option value="Islandia">Islandia</mat-option>
+                <mat-option value="Israel">Israel</mat-option>
+                <mat-option value="Italia">Italia</mat-option>
+                <mat-option value="Jamaica">Jamaica</mat-option>
+                <mat-option value="Japón">Japón</mat-option>
+                <mat-option value="Jordania">Jordania</mat-option>
+                <mat-option value="Kazajistán">Kazajistán</mat-option>
+                <mat-option value="Kenia">Kenia</mat-option>
+                <mat-option value="Letonia">Letonia</mat-option>
+                <mat-option value="Líbano">Líbano</mat-option>
+                <mat-option value="Luxemburgo">Luxemburgo</mat-option>
+                <mat-option value="México">México</mat-option>
+                <mat-option value="Panamá">Panamá</mat-option>
+                <mat-option value="Paraguay">Paraguay</mat-option>
+                <mat-option value="Perú">Perú</mat-option>
+                <mat-option value="Portugal">Portugal</mat-option>
+                <mat-option value="Reino Unido">Reino Unido</mat-option>
+                <mat-option value="República Dominicana">República Dominicana</mat-option>
+                <mat-option value="Rusia">Rusia</mat-option>
+                <mat-option value="Sudáfrica">Sudáfrica</mat-option>
+                <mat-option value="Suecia">Suecia</mat-option>
+                <mat-option value="Suiza">Suiza</mat-option>
+                <mat-option value="Tailandia">Tailandia</mat-option>
+                <mat-option value="Turquía">Turquía</mat-option>
+                <mat-option value="Uruguay">Uruguay</mat-option>
+                <mat-option value="Venezuela">Venezuela</mat-option>
+                <mat-option value="Vietnam">Vietnam</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Su testimonio de cómo conoció al Señor Jesucristo</mat-label>
+              <textarea matInput formControlName="testimonio" name="testimonio" rows="4" required></textarea>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Idioma de preferencia</mat-label>
+              <mat-select formControlName="idioma" name="idioma" required>
+                <mat-option value="es">Español</mat-option>
+                <mat-option value="en">Inglés</mat-option>
+              </mat-select>
+            </mat-form-field>
+        
             <!-- Checkbox de privacidad -->
             <mat-checkbox formControlName="privacidad" name="privacidad" required>
               He leído y aceptado condiciones de
